SynProdGITV1/force-app/main/default/objects/Account/fields/Account_DM_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_DM_External_ID__c</fullName>
    <description>Account External ID for Data migration</description>
    <externalId>true</externalId>
    <inlineHelpText>Account External ID for Data migration</inlineHelpText>
    <label>Account DM External ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>