SynProdGITV1/force-app/main/default/objects/Account/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Defines the sales or distribution channel through which products or services are sold, helping to categorize customers or sales opportunities based on their buying method.</description>
    <inlineHelpText>Defines the sales or distribution channel through which products or services are sold, helping to categorize customers or sales opportunities based on their buying method.</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key Account</fullName>
            </value>
            <value>
                <fullName>Territory</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>