SynProdGITV1/force-app/main/default/objects/Account/fields/CRM_Id__c.field-meta.xml
<CustomField>
    <fullName>CRM_Id__c</fullName>
    <description>CRM Id for CRM only fields - this value will be displayed only for Salesforce mastered account types - Competitor, Prospect, HQ and RHQ accounts.</description>
    <formula>IF(  AND(OR(ISBLANK(TEXT(Type)),ISNULL(TEXT(Type))),  Is_Competitor__c ), 
      &apos;COM-&apos; + CRM_Id_Number__c , 
         
CASE(TEXT(Type), 
     &apos;Prospect&apos;, &apos;PRO-&apos; + CRM_Id_Number__c , 
     &apos;HQ&apos;, &apos;HQ-&apos; + CRM_Id_Number__c,
     &apos;RHQ&apos;, &apos;RHQ-&apos; + CRM_Id_Number__c,
      CRM_Id_Number__c)  
)</formula>
    <inlineHelpText>Id for CRM mastered accounts - Prospect, Competitor, HQ and RHQ accounts.</inlineHelpText>
    <label>CRM Id</label>
    <type>Text</type>
</CustomField>