SynProdGITV1/force-app/main/default/objects/Account/fields/CRM_Id_Number__c.field-meta.xml
<CustomField>
    <fullName>CRM_Id_Number__c</fullName>
    <description>Auto number generated to be used in the CRM Id field. This field will not be displayed on the screen.</description>
    <displayFormat>{00000000}</displayFormat>
    <label>CRM Id Number</label>
    <type>AutoNumber</type>
</CustomField>