SynProdGITV1/force-app/main/default/objects/Account/fields/Group_Key__c.field-meta.xml
<CustomField>
    <fullName>Group_Key__c</fullName>
    <description>Identifies the grouping or classification of customers, accounts, or entities based on shared characteristics or business criteria, used for reporting, analysis, or segmentation</description>
    <inlineHelpText>For account type Prospect - defaulted to first 10 characters of the name. For account type Customer - this will come from S4 Hana.</inlineHelpText>
    <label>Group Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>