SynProdGITV1/force-app/main/default/objects/Account/fields/GUKC360_01__Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>GUKC360_01__Customer_Id__c</fullName>
    <description>Customer 360&apos;s Customer Id from SAP</description>
    <externalId>true</externalId>
    <inlineHelpText>SAP S4 Customer Golden Record BP ID</inlineHelpText>
    <label>Customer Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>