SynProdGITV1/force-app/main/default/objects/Account/fields/Has_Distributor_Manager__c.field-meta.xml
<CustomField>
    <fullName>Has_Distributor_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox indicates whether the Account has at least one Account Team Member with the role “Distributor Manager.” It is used to enforce rules for Orders created from the Portal.</description>
    <label>Has Distributor Manager</label>
    <type>Checkbox</type>
</CustomField>