SynProdGITV1/force-app/main/default/objects/Account/fields/Industry_Segments__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segments__c</fullName>
    <description>Comma separated list of all industry segments assigned to the account</description>
    <label>Industry Segments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>