SynProdGITV1/force-app/main/default/objects/Account/fields/Is_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Is_Competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to identify if the account is a competitor.</description>
    <inlineHelpText>Check this if the account is a Competitor.</inlineHelpText>
    <label>Is Competitor?</label>
    <type>Checkbox</type>
</CustomField>