SynProdGITV1/force-app/main/default/objects/Account/fields/KSA_Short_Address__c.field-meta.xml
<CustomField>
    <fullName>KSA_Short_Address__c</fullName>
    <description>Short Address used in Saudi Arabia</description>
    <label>KSA Short Address</label>
    <length>10</length>
    <type>Text</type>
</CustomField>