SynProdGITV1/force-app/main/default/objects/Account/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Specifies the preferred language for communication, documentation, and customer interactions.</description>
    <label>Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>