SynProdGITV1/force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>This will be populated from Flow using Billing Country code. It will be either ASIA, EMEA or AMERICAS</description>
    <inlineHelpText>Auto-populated based on Billing Country</inlineHelpText>
    <label>Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>