SynProdGITV1/force-app/main/default/objects/Account/fields/Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Segmentation__c</fullName>
    <description>Classifies customers or accounts into segments based on SAP data.</description>
    <inlineHelpText>Classifies accounts into segments based on SAP data.</inlineHelpText>
    <label>Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Opportunistic</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Develop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>