SynProdGITV1/force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z01</fullName>
                <color>#78C953</color>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Z02</fullName>
                <color>#FF0000</color>
                <label>Inactive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>