SynProdGITV1/force-app/main/default/objects/Account/fields/Sub_Reporting_Groups__c.field-meta.xml
<CustomField>
    <fullName>Sub_Reporting_Groups__c</fullName>
    <description>SS2-T151: Concatenated list of all Sub Reporting Groups linked via Account Industry Segments</description>
    <label>Sub Reporting Groups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>