SynProdGITV1/force-app/main/default/objects/Account/fields/Territory_Assignment_Dummy_Field__c.field-meta.xml
<CustomField>
    <fullName>Territory_Assignment_Dummy_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created for Dummy use, when Billing country Or Sub Reporting group updated on Account, we will make a callout for Territory Assignment on Account and for that we will update this dummy field every time.</description>
    <label>Territory Assignment Dummy Field</label>
    <type>Checkbox</type>
</CustomField>