SynProdGITV1/force-app/main/default/objects/Account/fields/Top_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Top_Parent_Account__c</fullName>
    <description>Top Parent Account</description>
    <formula>BLANKVALUE( Parent.Parent.Parent.Parent.Name ,
BLANKVALUE( Parent.Parent.Parent.Name,
BLANKVALUE( Parent.Parent.Name,
BLANKVALUE( Parent.Name, 
&quot;&quot;))))</formula>
    <inlineHelpText>Top Parent Account</inlineHelpText>
    <label>Top Parent Account</label>
    <type>Text</type>
</CustomField>