SynProdGITV1/force-app/main/default/objects/Account/fields/VAT_Registration_ID__c.field-meta.xml
<CustomField>
    <fullName>VAT_Registration_ID__c</fullName>
    <description>VAT Number of the account</description>
    <inlineHelpText>VAT Registration Number.</inlineHelpText>
    <label>VAT/EIN Registration ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>