SynProdGITV1/force-app/main/default/objects/Account/validationRules/Billing_Street_Length_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Street_Length_Validation</fullName>
    <active>true</active>
    <description>Billing_Street_Length_Validation - it cannot be greater than 60 characters</description>
    <errorConditionFormula>ISPICKVAL(Type, &apos;Prospect&apos;)
		&amp;&amp; LEN(BillingStreet) &gt; 60</errorConditionFormula>
    <errorMessage>Billing Street cannot be greater than 60 characters</errorMessage>
</ValidationRule>