SynProdGITV1/force-app/main/default/objects/Account/validationRules/Prospect_Creation_Billing_Country_Mandat.validationRule-meta.xml
<ValidationRule>
    <fullName>Prospect_Creation_Billing_Country_Mandat</fullName>
    <active>true</active>
    <description>Prevent Prospect Creation without Billing Country</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Type, &quot;Prospect&quot;),
    ISBLANK(BillingCountry)
)</errorConditionFormula>
    <errorMessage>Prospect cannot be saved without Billing Country</errorMessage>
</ValidationRule>