SynProdGITV1/force-app/main/default/objects/Account/listViews/All_Competitors.listView-meta.xml
<ListView>
    <fullName>All_Competitors</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CRM_Id__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Competitor__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Competitors</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>