SynProdGITV1/force-app/main/default/objects/Account/listViews/All_Customers.listView-meta.xml
<ListView>
    <fullName>All_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>GUKC360_01__Customer_Id__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <label>All Customers</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>