SynProdGITV1/force-app/main/default/objects/Account/listViews/All_Prospects.listView-meta.xml
<ListView>
    <fullName>All_Prospects</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CRM_Id__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Prospect</value>
    </filters>
    <label>All Prospects</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>