SynProdGITV1/force-app/main/default/objects/Account/listViews/All_Ship_To.listView-meta.xml
<ListView>
    <fullName>All_Ship_To</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>GUKC360_01__Customer_Id__c</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
    <columns>ACCOUNT.ADDRESS2_COUNTRY_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Ship-To</value>
    </filters>
    <label>All Ship To</label>
</ListView>