SynProdGITV1/force-app/main/default/objects/Account/listViews/My_Team_Accounts.listView-meta.xml
<ListView>
    <fullName>My_Team_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>GUKC360_01__Customer_Id__c</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Team</filterScope>
    <label>My Team Accounts</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>