SynProdGITV1/force-app/main/default/objects/Account/listViews/My_Territories_Accounts.listView-meta.xml
<ListView>
    <fullName>My_Territories_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>GUKC360_01__Customer_Id__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>MyTerritory</filterScope>
    <label>My Territories Accounts</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>