SynProdGITV1/force-app/main/default/objects/Account/listViews/Org_Account_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Account_Hierarchy</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>GUKC360_01__Customer_Id__c</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>Group_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Account_Hierarchy</label>
</ListView>